--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,10 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
-    "socket.io-client": "^1.4.8"
+    "socket.io-client": "^1.4.8",
+    "paper-button": "PolymerElements/paper-button#^1.0.13",
+    "paper-input": "PolymerElements/paper-input#^1.1.19",
+    "iron-form": "PolymerElements/iron-form#^1.1.4"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
