--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "socket.io-client": "^1.4.8",
     "paper-button": "PolymerElements/paper-button#^1.0.13",
     "paper-input": "PolymerElements/paper-input#^1.1.19",
-    "iron-form": "PolymerElements/iron-form#^1.1.4"
+    "iron-form": "PolymerElements/iron-form#^1.1.4",
+    "polymerfire": "firebase/polymerfire#^0.9.7"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
