--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "polymerday-twitter-timeline",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0",
   "authors": [
     "Edu Martin <emartinpicado@gmail.com>"
   ],
