--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
-    "node-tweet-stream": "^2.0.1",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.4.8",
+    "twit": "^2.2.5"
   }
 }
