--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "4.5.0"
+    "node": "^4.5.0"
   },
   "license": "ISC",
   "dependencies": {
